feat: added github actions

--- a/hugo.toml
+++ b/hugo.toml
@@ -34,7 +34,6 @@ theme = 'ananke'
   url = "/gift-registry/"
   weight = 3
 
-[[menus.main]]
-  name = "Ofte stillede spørgsmål"
-  url = "/faq/"
-  weight = 4
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
